[gd_scene load_steps=6 format=3 uid="uid://m8ulht5e02n"]

[ext_resource type="Script" path="res://Scripts/HealthBar.gd" id="1_wm4g5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qmx3n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ulkfx"]
bg_color = Color(0.188957, 0.689313, 0.599905, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hmbqa"]
bg_color = Color(0.212305, 0.212305, 0.212305, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(2.08165e-12, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4263p"]
bg_color = Color(0.816883, 0.237432, 0.124061, 1)

[node name="HealthBar" type="ProgressBar"]
z_index = 1
offset_right = 240.0
offset_bottom = 15.0
theme_override_styles/background = SubResource("StyleBoxEmpty_qmx3n")
theme_override_styles/fill = SubResource("StyleBoxFlat_ulkfx")
value = 60.0
show_percentage = false
script = ExtResource("1_wm4g5")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hmbqa")
theme_override_styles/fill = SubResource("StyleBoxFlat_4263p")
value = 75.0
show_percentage = false

[node name="DamageBarTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="DamageBarTimer" to="." method="_on_damage_bar_timer_timeout"]
